Creating LockedInApp class